<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manual_entry"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jesse.barscan.ManualEntry">



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:id="@+id/manualTable"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="40dp"
        android:paddingRight="35dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"

                android:text="@string/manual_entry_DOB"
                android:paddingTop="10dp" />

            <EditText
                android:id="@+id/dob"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="MMDDYYYY"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_marginLeft="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"

                android:text="@string/manual_entry_zip"
                android:paddingTop="10dp" />
            <EditText
                android:id="@+id/zip"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="5 digits"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:layout_marginLeft="10dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"

                android:text="@string/manual_entry_gender"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />
            <Spinner

            android:id="@+id/gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                android:layout_marginLeft="20dp" />





        </TableRow>


    </TableLayout>


    <Button
        android:text="Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveButton"
        android:onClick="saveClick"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
