<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jesse.barscan.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/barcode_header"
        android:id="@+id/status_message"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_focus"
        android:id="@+id/auto_focus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="66dp"
        android:checked="false" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:src="@drawable/barscanheaderlikeimage"
        android:id="@+id/imageView"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_height="wrap_content"
        android:text="@string/read_barcode"
        android:id="@+id/read_barcode"
        android:layout_width="match_parent"
        android:layout_marginBottom="39dp"
        android:layout_above="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_flash"
        android:id="@+id/use_flash"
        android:checked="false"
        android:layout_below="@+id/auto_focus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Manual Entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="manualEntry"
        android:id="@+id/manual"
        android:layout_below="@+id/options"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="11dp" />

    <Button
        android:text="Options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/options"
        android:onClick="toOptions"
        android:layout_alignTop="@+id/auto_focus"
        android:layout_alignRight="@+id/manual"
        android:layout_alignEnd="@+id/manual" />

    <TableLayout
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:id="@+id/tableLayout"

        android:layout_below="@+id/manual"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/address"
            android:textAppearance="?android:attr/textAppearanceMedium"
             />
        </TableRow>






        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/cityStateZip"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/dob"

            />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/gender"

            />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/over21"

                />
        </TableRow>



    </TableLayout>


</RelativeLayout>
